# rg552-fancontrol-phosh-plugin

./: README.md  config.h.in  meson.build  meson_options.txt  phosh-plugin-rg552-fancontrol-quick-setting.c  phosh-plugin-rg552-fancontrol-quick-setting.gresources.xml  qs.ui  rg552-fancontrol-quick-setting.c  rg552-fancontrol-quick-setting.desktop.in.in  rg552-fancontrol-quick-setting.h
po/: meson.build  ru.po
scripts/: detect-libphosh-api-version.sh
